# RAG_Handson

Handson/: .env.example  .gitignore  pyproject.toml  requirements.txt
Handson/01-Chunking/Documentation/Actual_Implementation_Documents/: 01-Environment-Setup-Chunking-Phase.md  07-Notebook-06-Fresh-Harvest-Chunking-Method-Guide.md  09-Notebook-08-SQL-Data-Chunking-Method-Guide.md  README.md
Handson/01-Chunking/Documentation/Chunking/: 03-All-Chunking-Methods-Complete-Guide.md  05-Chunking-Strategies-by-Dataset-Type.md  06-Functional-Documents-Chunking-Guide.md  07-Technical-Documents-Chunking-Guide.md  08-Advanced-Chunking-Techniques.md  09-Chunk-Size-and-Parameter-Tuning-Guide.md  10-Chunk-Quality-Checklist-and-Evaluation.md  12-End-to-End-Chunking-Playbook.md  13-Implementation-Patterns-and-Code-Templates.md  README.md
Handson/01-Chunking/data/csv/: ecommerce_orders_support_data.csv
Handson/01-Chunking/notebooks/: 01_chunking_handson.ipynb  02_csv_chunking_handson.ipynb  03_pdf_chunking_handson.ipynb  05_ml_notes_chunking_handson.ipynb  06_fresh_harvest_chunking_handson.ipynb  07_rag_documents_chunking_handson.ipynb  08_sql_data_chunking_handson.ipynb
Handson/02-Embeddings/: README.md
Handson/02-Embeddings/Documentation/Actual_Implementation_Documents/: 01-Environment-Setup-Embeddings-Phase.md  02-Notebook-01-Embeddings-Handson-Method-Guide.md  README.md
Handson/02-Embeddings/Documentation/Embeddings/: 01-Embedding-Science-and-Foundations.md  02-Embedding-Model-Landscape-and-Selection.md  03-Tokenization-Chunk-to-Embedding-Interface.md  README.md  (+10 more)
Handson/02-Embeddings/data/: README.md
Handson/02-Embeddings/notebooks/: 01_embeddings_handson.ipynb
(+326 files in other folders)
